CodeJuzi, feat: optimize java native code sandbox